--- a/Tim try.html
+++ b/Tim try.html
@@ -1,12 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Transactions page</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <scritp src="script.js"></script>
 </head>
 <body>
-    
+    <div class="uk-grid-item-match" style="text-align: center; height: 50%">
+        <div
+          class="uk-card uk-card-default uk-card-body uk-card-small cardColour"
+          style="width: 100%"
+        >
+          <div style="width: 62%; display: inline-block">
+            Send to Address
+            <form id="sendTo" style="width: 100%" action="">
+              <div class="input-container">
+                <input
+                  type="text"
+                  id="sendToText"
+                  style="word-wrap: break-word"
+                  value=""
+                  onclick="clearSendTo()"
+                />
+              </div>
+            </form>
+          </div>
+          <div style="width: 18%; display: inline-block">
+            Amount
+            <form id="amount " action="" style="width: 100%">
+              <div class="input-container">
+                <input
+                  onsubmit="return false"
+                  oninput=""
+                  type="text"
+                  id="amountText"
+                  style="word-wrap: break-word"
+                  value=""
+                  onclick="clearAmountText()"
+                />
+              </div>
+            </form>
+          </div>
+          <button
+            style="display: inline-block; width: 16%"
+            id="sendTransaction"
+          >
+            Send
+          </button>
+        </div>
+        <div style="height: 100%">
+          <div
+            id="txBox"
+            class="
+              uk-card uk-card-default uk-card-body uk-card-small
+              cardColour
+              uk-margin-top
+            "
+            style="height: 654px; color: ; padding: 10px; overflow: auto"
+          >
+            Current UTXOs
+            <div
+              style="
+                margin-top: 10px;
+                color: black;
+                display: flex;
+                width: 100%;
+                font-size: 12px;
+              "
+            >
+              <div
+                style="
+                  word-wrap: normal;
+                  width: 16%;
+                  background-color: rgb(255, 165, 0, 0.3);
+
+                  padding: 15px 0px;
+                "
+              >
+                satoshis
+              </div>
+              <div
+                style="
+                  word-wrap: normal;
+                  width: 9%;
+                  background-color: rgba(0, 255, 0, 0.3);
+                  padding: 15px 0px;
+                "
+              >
+                vout
+              </div>
+              <div
+                style="
+                  word-wrap: normal;
+                  width: 42%;
+                  background-color: rgba(0, 0, 255, 0.3);
+                  padding: 15px 0px;
+                "
+              >
+                txid
+              </div>
+              <div
+                style="
+                
+                  word-wrap: normal;
+                  width: 33%;
+                  background-color: rgba(128,0,128,0.3);
+                padding: 15px 0px ;
+s
+                "
+              >
+                scriptPubKey
+              </div>
+            </div>
+
+            <div id="utxoAppend" style="color: black; font-size: 12px"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
